Updates to other modules after core API changes in previous commit.
- Create new Index interface and rename various FooIndex -> FooIndex1.
- During copies, allow an ObjId remapped to null to mean create a new object.
- Sprinkle core API getKey() methods into SchemaItem subclasses.
- Fix bug where index reference encodings need to be genericized.
- Disallow one composite index to be a prefix of another composite index.
- Add convenience methods Encoding.encode() and Encoding.decode().
- Use an empty schema by default (and don't record in database).
- Include storage ID assignments in XMLObjectSerializer <schema>'s.
- Make SchemaModel lockdown a two-phase process.
- Misc cleanups & minor refactorings.